# DirectFourierTransform

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  README.md  direct_fourier_transform.c  direct_fourier_transform.h  main.c  main.cpp  unit_testing.cpp  visibilities.txt
Debug/: DirectFourierTransform  makefile
Debug/src/: DFT.d  main.d  subdir.mk
src/: config.h  main.c
